<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>student_robotics</name>
  <version>0.0.0</version>
  <description>Student robotics package</description>
  <maintainer email="student@unibe.ch">Edward Haynes</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
